# coffee_backend

./: Cargo.toml  README.md  configuration.yaml
.sqlx/: query-76cef03fa4499eedfbd872f546cd5610078878acb979b81ae6d6ce35b4e2879c.json
migrations/: 20250117162605_create_users_table.sql  20250129235434_create_subscriptions_table.sql
scripts/: first_migration.sh  init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: fallback.rs  health_check.rs  mod.rs
src/routes/user/: mod.rs
src/user/: mod.rs
tests/: common.rs  fallback.rs  health_check.rs  main.rs
