[package]
name = "coffee_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.1"
serde = { version = "1.0.217", features = ["derive"]}
sqlx = { version = "0.8.3", features = [
    "runtime-tokio", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]}
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
uuid = { version = "1.11.1", features = [
	"v4", 
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
