[package]
name = "coffee_backend"
version = "0.1.0"
authors = ["Zac Woll <zacwoll@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "coffee_backend"

[dependencies]
anyhow = "1.0.95"
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.1"
config = "0.15.6"
http-body-util = "0.1.2"
hyper = "1.5.2"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"]}
sqlx = { version = "0.8.3", features = [
    "runtime-tokio", 
    "macros", 
    "postgres", 
    "uuid", 
    "chrono", 
    "migrate"
]}
testcontainers-modules = { version = "0.11.5", features = ["postgres"] }
thiserror = "2.0.11"
tokio = { version = "1.42.0", features = ["full"] }
tower = "0.5.2"
uuid = { version = "1.11.1", features = [
	"v4", 
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }

[dev-dependencies]
pretty_assertions = "1.4.1"
serde_json = "1.0.135"
testcontainers = "0.23.1"
testcontainers-modules = "0.11.5"
